# ctranslate2-web-server

./: Dockerfile.cpu  Dockerfile.gpu  Makefile  README.md  cli.sh  convert.sh  pyproject.toml  sample.sh
.github/workflows/: docker.yml
sample/: eval_all.py  eval_flores_en_ca.py  eval_models.txt  pyproject.toml
src/: cli.py  hf.py  main.py
