[project]
name = "ctranslate2-web-server"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.136.1",
    "uvicorn[standard]==0.46.0",
    "ctranslate2==4.7.2",
    "transformers==5.7.0",
    "huggingface-hub>=0.19.3",
    "sentencepiece==0.2.1",
    "torch==2.11.0",
    "accelerate>=1.13.0",
    "pillow>=10.0.0",
    "torchvision>=0.26.0",
]

[tool.uv.sources]
ctranslate2 = { path = "wheels/ctranslate2-4.7.2-cp314-cp314-manylinux_2_27_x86_64.manylinux_2_28_x86_64.whl" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["*.py"]
