[project]
name = "ctranslate2-web-server"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "fastapi==0.136.1",
    "uvicorn[standard]==0.46.0",
    "ctranslate2==4.7.1",
    "transformers==5.8.1",
    "huggingface-hub>=0.19.3",
    "sentencepiece==0.2.1",
    "torch==2.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["*.py"]

